ecmascript/parser/tests/test262-error-references/fail/94535dc25ef762ee.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/94535dc25ef762ee.js:1:17
  |
1 | var x = /[a-z]/\\ux
  |                 ^^

